Applied max-height to description when not expanded to resolve overlap issue in Safari

--- a/amp-template-generator/src/styles/scss/components/_amp-video.scss
+++ b/amp-template-generator/src/styles/scss/components/_amp-video.scss
@@ -52,6 +52,7 @@
       }
 
       .description-text-less {
+        max-height: 4.2rem;
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
